# FastAPI-Cookbook

./: .gitignore  README.md  tasks.csv
Chapter01/bookstore/: bookstore_main.py  main.py  models.py  test_bookstore_main.py  test_main.py
Chapter01/fastapi_start/: main.py  router_example.py
Chapter02/async_example/: main.py  timing_api_calls.py
Chapter02/nosql_example/: database.py  main.py  nosql_database.py  nosql_main.py  requirements.txt
Chapter02/sql_example/: database.py  main.py  requirements.txt  sql_database.py  sql_main.py  test.db
Chapter02/uploads_and_downloads/: main.py  upoads_downloads_main.py
Chapter03/task_manager_app/: main.py  models.py  operations.py  requirements.txt  security.py  tasks.csv  test_main.py  test_operations.py
Chapter03/task_manager_rest_api/: conftest.py  main.py  modeltasks.py  operations.py  tasks.csv  test_main.py  test_operations.py  test_tm_main.py  test_tm_operations.py  tm_main.py  tm_models.py  tm_operations.py
Chapter04/saas_app/: api_key.py  conftest.py  database.db  db_connection.py  github_login.py  main.py  mfa.py  models.py  operations.py  premium_access.py  rabc.py  rbac.py  requirements.txt  responses.py  security.py  test_main.py  test_operations.py  test_security.py  third_party_login.py  user_session.py
Chapter05/protoapp/: locustfile.py  pytest.ini  requirements.txt  run_server.py
Chapter06/ticketing_system/: alembic.ini  pytest.ini  requirements.txt  test.db
Chapter12/fca-server/: LICENSE.txt  README.md  pyproject.toml
Chapter12/fca-server/src/fca_server/: __about__.py  __init__.py  main.py
Chapter12/fca-server/tests/: __init__.py
(+130 files in other folders)
