[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fca-server"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "U.N. Owen", email = "void@some.where" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["fastapi"]

[project.urls]
Documentation = "https://github.com/U.N. Owen/fca-server#readme"
Issues = "https://github.com/U.N. Owen/fca-server/issues"
Source = "https://github.com/U.N. Owen/fca-server"


[tool.hatch.version]
path = "src/fca_server/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/fca_server tests}"

[tool.coverage.run]
source_pkgs = ["fca_server", "tests"]
branch = true
parallel = true
omit = ["src/fca_server/__about__.py"]

[tool.coverage.paths]
fca_server = ["src/fca_server", "*/fca-server/src/fca_server"]
tests = ["tests", "*/fca-server/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
